# dotnet-local-brain

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
data/: coverage_matrix.json
sovereign_shell/: __init__.py  __main__.py  cli.py  config.py
sovereign_shell/inference/: phi4.py  prompts.py
sovereign_shell/memory/: embeddings.py  graph_builder.py  graph_rag.py  graphdb.py  vectordb.py
sovereign_shell/models/: coverage.py  schemas.py
sovereign_shell/scraper/: devblogs.py  github_repos.py  hf_datasets.py  parser.py  sentinel.py  sources.py  stackoverflow.py  the_stack.py
sovereign_shell/validator/: dotnet_build.py
